--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ exclude = ["/sgx/*"]
 #members = ["impl"]
 
 [dependencies]
-erased-serde = { git = "https://github.com/veracruz-project/erased-serde.git", branch="veracruz" }
-inventory = { git = "https://github.com/veracruz-project/inventory.git", branch="veracruz" }
+erased-serde = { git = "https://github.com/veracruz-project/erased-serde.git", branch = "veracruz-v1" }
+inventory = { git = "https://github.com/veracruz-project/inventory.git", branch = "veracruz-v1" }
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
-serde = { features = ["derive"], git = "https://github.com/veracruz-project/serde.git", branch="veracruz" }
+serde = { features = ["derive"], git = "https://github.com/veracruz-project/serde.git", branch = "veracruz-v1" }
 typetag-impl = { version = "=0.1.4", path = "impl" }
 sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
 
